tests/invalid_inputs/sema/addr_of_function.cpp
// test that address of function is invalid (in cpm)

void f();

int main() {
	&f;
}
